<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/profile_username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        style="@style/ProfileLabelStyle"
        android:text="@string/profile_username_label_caption"/>

    <EditText
        android:id="@+id/profile_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_username_label"
        android:hint="@string/profile_username_input_hint"/>

    <TextView
        android:id="@+id/profile_contact_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_username_input"
        android:layout_marginTop="8dp"
        style="@style/ProfileLabelStyle"
        android:text="@string/profile_contact_label_caption"/>

    <EditText
        android:id="@+id/profile_contact_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_contact_label"
        android:hint="@string/profile_contact_input_hint"/>

    <TextView
        android:id="@+id/profile_language_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_contact_input"
        android:layout_marginTop="8dp"
        style="@style/ProfileLabelStyle"
        android:text="@string/profile_language_label_caption"/>

    <Spinner
        android:id="@+id/profile_language_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_language_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/profile_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="?attr/colorOnSecondary"
        android:text="@string/profile_confirm_button_caption"/>

</androidx.constraintlayout.widget.ConstraintLayout>