...
    <string name="profile_username_label_caption">Username</string>
    <string name="profile_username_input_hint">Type your username..</string>
    <string name="profile_contact_label_caption">Contact</string>
    <string name="profile_contact_input_hint">Type your contact info..</string>
    <string name="profile_language_label_caption">Language</string>
    <string name="profile_confirm_button_caption">Confirm</string>
    <string name="profile_confirm_error_message_invalid_data">Provided profile data is incorrect!</string>
    <string name="profile_confirm_error_message_saving_failed">Provided profile data saving was failed!</string>
    <string name="profile_confirm_error_message_saving_succeed">Provided profile data has been saved!</string>

    <string name="play_activity_disconnection_message_text">Disconnection has been occurred!</string>
    <string name="play_activity_unexpected_connection_ending_message_text">Unexpected connection ending has been occurred!</string>

    <string name="play_searching_fragment_message_searching_game">Searching Game…</string>
    <string name="play_searching_fragment_message_game_found">Game Found!</string>
...
